# maybe-compute

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
maybe_compute/: __init__.py
