[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maybe-compute"
dynamic = ["version"]
description = "to disk caching of compute"
authors = [
    { name = "Ian Hunt-Isaak", email = "ianhuntisaak@gmail.com" }
]
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "xarray",
]

[project.urls]
Homepage = "https://github.com/ianhi/maybe-compute"
"Source Code" = "https://github.com/ianhi/maybe-compute"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "ipython",
    "mypy",
    "pre-commit",
    "pytest",
]
testing = [
    "pytest",
    "pytest-cov",
    "tox",
    "tox-conda",
]

[tool.setuptools]
packages = ["maybe_compute"]

[tool.setuptools.dynamic]
version = { attr = "maybe_compute._version.__version__" }

[tool.ruff]
line-length = 88
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff format
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
files = ["maybe_compute"]
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
implicit_reexport = false
show_column_numbers = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-W error"
